# consoleShell

./: CMakeLists.txt  makefile
include/: Commands.h  Environment.h  FileSystem.h  Files.h
src/: Commands.cpp  Environment.cpp  FileSystem.cpp  Files.cpp
